--- a/assets/css/site/_0.1-config--variables.scss
+++ b/assets/css/site/_0.1-config--variables.scss
@@ -31,6 +31,16 @@ $ia-grey30:         #CCCCCC;
 $ia-grey20:         #DDDDDD;
 $ia-grey10:         #EEEEEE;
 
+$kd-grey90:         #333333;
+$kd-grey80:         #555555;
+$kd-grey70:         #777777;
+$kd-grey60:         #999999;
+$kd-grey50:         #AAAAAA;
+$kd-grey40:         #BBBBBB;
+$kd-grey30:         #CCCCCC;
+$kd-grey20:         #DDDDDD;
+$kd-grey10:         #EEEEEE;
+
 	$bob-blue:    	#1B9EE0;
 	$bob-grey:		#E2E2E2;
 
