--- a/assets/css/site/_2.1-section--masthead.scss
+++ b/assets/css/site/_2.1-section--masthead.scss
@@ -107,13 +107,29 @@
 
 // A.1. END -----------------------------------------------------------------------------------------------------------
 
+// A.2. MASTHEAD MOBILE -----------------------------------------------------------------------------------------------
+
+.masthead-mobi {
+    
+    @include position (fixed, 0);
+    bottom: auto;
+    background: $kd-lilac;
+    z-index: 10;
+    
+    .logo-mobi { width: 120px; height: auto; margin-top: 10px; margin-left: 10px; display: inline-block; }
+
+}
+
+// A.2. END -----------------------------------------------------------------------------------------------------------
+
 // A. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 // B. MOBILE STYLES +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 @include media-query(feature) { 
 
-	
+	.masthead-mobi { display: block; }
+    
     #masthead {
         
         display: none;
@@ -132,7 +148,8 @@
 
 @include media-query(mobile) { 
 
-	
+	.masthead-mobi { display: block; }
+    
     #masthead {
         
         display: none;
@@ -149,19 +166,31 @@
 
 // D. DESKTOP STYLES ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-@include media-query(tablet) { }
+@include media-query(tablet) {
+
+    .masthead-mobi { display: none; }
+
+}
 
 // D. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 // E. WIDE DESKTOP STYLES +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-@include media-query(desk) { }
+@include media-query(desk) {
+
+    .masthead-mobi { display: none; }
+
+}
 
 // E. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 // E. WIDE DESKTOP STYLES +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-@include media-query(desk-wide) { }
+@include media-query(desk-wide) {
+
+    .masthead-mobi { display: none; }
+
+}
 
 // E. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
