--- a/assets/css/site/_2.4-section--about.scss
+++ b/assets/css/site/_2.4-section--about.scss
@@ -21,7 +21,7 @@
         h2 {
             
             color: $ia-grey20;
-            margin: 0 0 35px 0;
+            margin: 180px 0 35px 0;
             line-height: normal;
             
         }
