--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -118,7 +118,7 @@
     @import	"_2.5-section--services";
 
     // 2.6. ARTISTS
-    @import	"_2.6-section--artists";
+    @import	"_2.6-section--team";
 
     // 2.7. CONTACT
     @import	"_2.7-section--contact";
